# LFP-LOC

./: .gitattributes  .gitignore  LICENSE  environment.yml  example_run.ipynb  main.py  pyproject.toml  readme.md
lib/: relabeled_atlas.npy  rgb_map.npy
src/: clustering.py  dim_reduction.py  plotting.py  probe_atlas.py  utils.py
src/lfploc/: __init__.py  main.py  plotting.py  utils.py
