[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "lfploc"
version = "0.0.1"
authors = [
  { name="Alberto Perna", email="alberto.perna@iit.it" },
  { name="Raffaele Adamo", email="raffaele.adamo@iit.it" },
]
description = "A python package to estimate anatomical location using iEEG probes"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "spikeinterface>=0.104.0",
  "scikit-learn>=1.5.0",
  "brainglobe-atlasapi>=2.1.0",
  "matplotlib>=3.6",
]

[project.urls]
Homepage = "https://github.com/raffaele222/LFP-LOC"
Issues = "https://github.com/raffaele222/LFP-LOC/issues"

